# stock-bot

./: README.md  analystic.py  bot.py  crawl.py  hello.csv  lab.py  lab_trend_ichimoku.py  lab_volatility_dochian_channel.py  lab_volume_adi.py  lab_volume_mfi.py  lab_volume_obv.py  lib.py  lstm_model.keras  main.py  predata.py  predict.py  pyproject.toml
analystic/: adi.py  flags_pennants.py  harmonic_patterns.py  ichimoku.py  mfi.py  obv.py  trendline_automation.py
datasets/: models.csv  vni-01.xlsx  vni-02.xlsx
src/: preprocess.py
