[tool.poetry]
name = "stock-bot"
version = "0.1.0"
description = "stock"
authors = ["Hoando."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


vnstock3 = "^0.3.0.5"
seaborn = "^0.13.2"
pandas = "^2.2.2"
mplfinance = "^0.12.10b0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "src:main"